fix mobile spacing issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </nav>
       
-    <div id="main" class="p-5">
+    <div id="main" class="container-fluid p-5">
         <div class="p-5 mb-4 bg-body-tertiary rounded-5">
           <div class="container-fluid py-5">
             <h1 class="fw-semibold">Join us in combatting the effects of urban developments in drought-prone areas</h1>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="row">
-          <div class="col">
+          <div class="col mb-4">
             <div class="h-100 p-5 bg-body-tertiary rounded-5">
               <h2 class="fs-4 fw-semibold">Get the facts on how ongoing construction is contributing to droughts</h2>
               <button type="button" class="btn btn-secondary mt-3">
@@ -33,7 +33,7 @@
             </button>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-4">
             <div class="h-100 p-5 bg-body-tertiary rounded-5">
               <h2 class="fs-4 fw-semibold">Calculate your water consumption</h2>
               <button type="button" class="btn btn-secondary mt-5">
