add calculator and info pages and link homepage to them

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
           <div class="col mb-4">
             <div class="h-100 p-5 bg-body-tertiary rounded-5">
               <h2 class="fs-4 fw-semibold">Get the facts on how ongoing construction is contributing to droughts</h2>
-              <button type="button" class="btn btn-secondary mt-3">
+              <a type="button" class="btn btn-secondary mt-3" href="information.html">
                 Fact Sheet
                 <i class="bi bi-chevron-double-right"></i>
-            </button>
+            </a>
             </div>
           </div>
           <div class="col mb-4">
             <div class="h-100 p-5 bg-body-tertiary rounded-5">
               <h2 class="fs-4 fw-semibold">Calculate your water consumption</h2>
-              <button type="button" class="btn btn-secondary mt-5">
+              <a type="button" class="btn btn-secondary mt-5" href="waterCalculator.html">
                 Water Calculator
                 <i class="bi bi-chevron-double-right"></i>
-              </button>
+              </a>
             </div>
           </div>
         </div>
