--- a/information.html
+++ b/information.html
@@ -8,10 +8,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
-    
-    <nav class="navbar bg-primary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Water Conscious Gators</a>
+          <a class="navbar-brand" href="index.html">Water Conscious Gators</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="information.html">Fact Sheet</a>
+              </li>    
+              <li class="nav-item">
+                <a class="nav-link" href="waterCalculator.html">Water Calculator</a>
+              </li>           
+            </ul>
+          </div>
         </div>
     </nav>
       
