--- a/waterCalculator.html
+++ b/waterCalculator.html
@@ -7,11 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
-  <body>
-    
-    <nav class="navbar bg-primary" data-bs-theme="dark">
+  <body> 
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Water Conscious Gators</a>
+          <a class="navbar-brand" href="index.html">Water Conscious Gators</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="information.html">Fact Sheet</a>
+              </li>    
+              <li class="nav-item">
+                <a class="nav-link" href="waterCalculator.html">Water Calculator</a>
+              </li>           
+            </ul>
+          </div>
         </div>
     </nav>
       
