--- a/waterCalculator.html
+++ b/waterCalculator.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body> 
+    <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Water Conscious Gators</a>
@@ -27,6 +28,7 @@
         </div>
     </nav>
       
+    <!-- body -->
     <div id="main" class="container-fluid p-5">
         <div class="p-5 mb-4 bg-body-tertiary rounded-5">
           <div class="container-fluid py-5">
