--- a/waterCalculator.html
+++ b/waterCalculator.html
@@ -30,11 +30,46 @@
       
     <!-- body -->
     <div id="main" class="container-fluid p-5">
-        <div class="p-5 mb-4 bg-body-tertiary rounded-5">
-          <div class="container-fluid py-5">
-            <h1 class="fw-semibold">Water Consumption Calculator Coming Soon</h1>
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+              <div class="h-100 p-5 bg-body-tertiary rounded-5">
+                <h2 class="fs-4 fw-semibold">Enter your best estimate for the following information to calculate your estimated monthly water usage</h2>
+              </div>
+            </div>
+
+            <div class="col mb-4">
+              <div class="h-100 p-5 bg-body-tertiary rounded-5">
+                <form>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">How many minutes do you usually take to shower?</label>
+                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">How many times a month do you run a dishwasher?</label>
+                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">How many times a week do you hand wash dishes?</label>
+                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">How many loads of laundry do you do a month?</label>
+                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-secondary mt-2">
+                        Calculate Results
+                        <i class="bi bi-chevron-double-right"></i>
+                    </button>
+                </form>
+              </div>
+            </div>
           </div>
-        </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
