--- a/waterCalculator.html
+++ b/waterCalculator.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
-  <body> 
+  <body>     
+
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -43,26 +44,26 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">How many minutes do you usually take to shower?</label>
-                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                                <label for="showerTimeInput" class="form-label">How many minutes do you usually take to shower?</label>
+                                <input type="number" class="form-control w-75" id="showerTimeInput" value="0">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">How many times a month do you run a dishwasher?</label>
-                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                                <label for="dishwasherFreqInput" class="form-label">How many times a month do you run a dishwasher?</label>
+                                <input type="number" class="form-control w-75" id="dishwasherFreqInput" value="0">
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">How many times a week do you hand wash dishes?</label>
-                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                                <label for="handwashAmtInput" class="form-label">How many times a week do you hand wash dishes?</label>
+                                <input type="number" class="form-control w-75" id="handwashAmtInput" value="0">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">How many loads of laundry do you do a month?</label>
-                                <input type="password" class="form-control w-75" id="exampleInputPassword1">
+                                <label for="laundryFreqInput" class="form-label">How many loads of laundry do you do a month?</label>
+                                <input type="number" class="form-control w-75" id="laundryFreqInput" value="0">
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-secondary mt-2">
+                    <button type="button" class="btn btn-secondary mt-2" id="submitButton">
                         Calculate Results
                         <i class="bi bi-chevron-double-right"></i>
                     </button>
@@ -71,7 +72,22 @@
             </div>
           </div>
 
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modalBody"></div>
+              </div>
+            </div>
+          </div>
 
+    <script src="waterCalculator.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
