--- a/waterCalculator.html
+++ b/waterCalculator.html
@@ -6,6 +6,12 @@
     <title>Water Conscious Gators</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  
+    <style>
+      .modal-header {
+        background-color: #0d6efd;
+      }
+    </style>
   </head>
   <body>     
 
@@ -73,14 +79,17 @@
           </div>
 
           <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade modal-lg" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
                   <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body" id="modalBody"></div>
+                <div class="modal-body" >
+                  <p class="fs-2 fw-medium" id="modalBody"></p>
+                  <p class="col-md-8 fs-5 fw-light">Always stay mindful of drought activity in your area and be conscious of your water consumption!</p>
+                </div>
               </div>
             </div>
           </div>
