--- a/waterCalculator.html
+++ b/waterCalculator.html
@@ -82,7 +82,7 @@
           <div class="modal fade modal-lg" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header" data-bs-theme="dark">
                   <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
