--- a/information.html
+++ b/information.html
@@ -6,8 +6,26 @@
     <title>Water Conscious Gators</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+      /*reference: https://stackoverflow.com/questions/62408333/scaling-google-slides-iframe*/
+      .google-slides-container {
+        position: relative;
+        width: 100%;
+        padding-top: 60%;
+        overflow: hidden;
+      }
+
+      .google-slides-container iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+      }
+    </style>
   </head>
   <body>
+    <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Water Conscious Gators</a>
@@ -27,12 +45,17 @@
         </div>
     </nav>
       
+    <!-- body -->
     <div id="main" class="container-fluid p-5">
         <div class="p-5 mb-4 bg-body-tertiary rounded-5">
-          <div class="container-fluid py-5">
-            <h1 class="fw-semibold">Facts Sheet Coming Soon</h1>
+          <div class="container-fluid text-center">
+            <h1 class="fw-semibold mb-3">Learn more with the presentation below!</h1>
+            <div class="google-slides-container">
+              <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSOXKGYwx5BCgCfZsXWLMCHY0isb_8rClfuFHcY9EiO9Mv_KWX1TN2NggdIoYajaddJsT90o37-8GvF/pubembed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>          </div>
+            </div>
           </div>
         </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
